--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -41,7 +41,7 @@ of those sections to manage the look and feel of the site. */
 
 .about-section {
     height: 100%;
-    padding-top: 1%;
+    padding-top: 100px;
     text-align: center;
     background: #fff;
 }
@@ -86,4 +86,39 @@ of those sections to manage the look and feel of the site. */
     background-color: #d11e4f;
 }
 
+.btn-custom {
+  background-color: hsl(214, 37%, 28%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#7a99c1", endColorstr="#2c4361");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#7a99c1), to(#2c4361));
+  background-image: -moz-linear-gradient(top, #7a99c1, #2c4361);
+  background-image: -ms-linear-gradient(top, #7a99c1, #2c4361);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7a99c1), color-stop(100%, #2c4361));
+  background-image: -webkit-linear-gradient(top, #7a99c1, #2c4361);
+  background-image: -o-linear-gradient(top, #7a99c1, #2c4361);
+  background-image: linear-gradient(#7a99c1, #2c4361);
+  border-color: #2c4361 #2c4361 hsl(214, 37%, 19.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.56);
+  -webkit-font-smoothing: antialiased;
+}
+
+
+.vertical
+{
+    height:auto;
+    width:22px;
+    background-color:black;
+    color:white;
+    border-radius:5px;
+}
+.tab
+{
+    margin-left:5px;
+}
+.fixed {
+  position:fixed;
+  top:40%;
+  z-index:99;
+}
 
