--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -60,10 +60,24 @@ of those sections to manage the look and feel of the site. */
     background: #fff;
 }
 
+.location-section {
+    height: 100%;
+    padding-top: 50px;
+    text-align: center;
+    background: #fff;
+}
+
 .contact-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
+    background: #fff;
+}
+
+.footer-section {
+    height: 100%;
+    padding-top: 50px;
+    text-align: right;
     background: #fff;
 }
 
